Fixed styling issues on IE 11

--- a/src/main/webapp/bundles/health_v4/less/moreinfo/moreInfo.less
+++ b/src/main/webapp/bundles/health_v4/less/moreinfo/moreInfo.less
@@ -323,6 +323,11 @@
 .more-info-affixed-header {
   .frequencyAmount {
     font-size: 36px;
+
+    &.comingSoon {
+      font-size: 18px;
+      margin-top: 5px;
+    }
   }
 
   .dollarSign,
@@ -376,6 +381,7 @@
   display: flex;
   justify-content: space-between;
   margin: -10px;
+  width: 100%;
 }
 
 .moreInfoPriceWrapper {
